changed db name

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,11 +1,11 @@
 {
-    "type": "postgres",
-    "host": "localhost",
-    "port": "5432",
-    "username": "postgres",
-    "password": "postgres",
-    "database": "test_db",
-    "entities": ["dist/entities/*.js"],
-    "logging": true,
-    "synchronize": true
+  "type": "postgres",
+  "host": "localhost",
+  "port": "5432",
+  "username": "postgres",
+  "password": "postgres",
+  "database": "productdistapi",
+  "entities": ["dist/entities/*.js"],
+  "logging": true,
+  "synchronize": true
 }
